@@ -1,3 +1,4 @@
 Brett Henderson - Majority of existing code.
 Marcus Wolschon - XmlDownloader (--read-api) task.
 Karl Newman - Area filtering task (--bounding-box, --bounding-polygon) improvements.
+Stefan Baebler - "-" alias for stdin for --read-xml task
